# AIOD-rest-api

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
.github/workflows/: dockerized-tests.yml
alembic/: Dockerfile  README.md  alembic.ini
alembic/versions/: 384e6782562b_extend_char_limit_note.py
connectors/: fill-examples.sh
connectors/huggingface/: datasets.sh
connectors/openml/: entry.sh
connectors/zenodo/: datasets.sh  entry.sh
elasticsearch/: elasticsearch_query.py  publication.json
elasticsearch/setup/: curl.sh  dataset.json  publication.json
es/: elasticsearch_query.py
es/setup/: Dockerfile  create_indices.sh  curl.sh  curl_dockerfile  dataset.json  event.json  experiment.json  ml_model.json  news.json  organisation.json  project.json  publication.json  service.json
logstash/: Dockerfile  logstash_config.py
logstash/config/: logstash.yml
logstash/pipeline/: logstash_config.py
logstash/setup/: Dockerfile
metadata-model-comparison/: .gitignore  README.md
metadata-model-comparison/data/: aiod-model-demokritos.json
metadata-model-comparison/scripts/: create_comparison.py  download_implemented_fields.sh
scripts/: clean.sh
src/: README.md  authentication.py  main.py  schemas.py
src/connectors/: __init__.py  synchronization.py
src/converters/: __init__.py  codeArtifact_converter.py
src/database/: models.py  setup.py
src/routers/: __init__.py  codeartifact_router.py  global_search_router.py  resource_router.py  router.py  search_router.py  upload_router_huggingface.py
(+169 files in other folders)
